# api/swagger/swagger.yaml
@@ -25,10 +25,11 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
-  - multipart/form-data
+  - multipart/form-data 
 paths:
   /hello:
     # binds a127 app logic to a route
+
     x-swagger-router-controller: hello
     get:
       description: Returns 'Hello' to the caller
@@ -56,8 +57,6 @@ paths:
     x-swagger-router-controller: hello
     post:
       summary: Uploads a file.
-      security:
-        - basicAuth: []
       consumes:
         - multipart/form-data
       operationId: createImage
@@ -75,6 +74,27 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /login:
+    x-swagger-router-controller: hello
+    post:   
+      summary: login
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      operationId: auth
+      parameters:
+        - name: user_type
+          in: formData
+          description: User's type.
+          type: string
+          required: true            
+      responses:
+        201: 
+          description: SuccessFul request
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
